--- a/modules/core/thermo/thermo.css
+++ b/modules/core/thermo/thermo.css
@@ -33,8 +33,8 @@
     padding-left:3px;
 }
 
-.edpThermo .icon-arrow-up.positive.inRange,
-.edpThermo .icon-arrow-up.negative.inRange {
+.edpThermo .icon-arrow-up.boiling.inRange,
+.edpThermo .icon-arrow-up.freezing.inRange {
     opacity:0;
 }
 .edpThermo .icon-arrow-up.boiling {
