--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?rsrfqf');
-  src:  url('../fonts/icomoon.eot?rsrfqf#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?rsrfqf') format('truetype'),
-    url('../fonts/icomoon.woff?rsrfqf') format('woff'),
-    url('../fonts/icomoon.svg?rsrfqf#icomoon') format('svg');
+  src:  url('/assets/fonts/icomoon.eot?rsrfqf');
+  src:  url('/assets/fonts/icomoon.eot?rsrfqf#iefix') format('embedded-opentype'),
+    url('/assets/fonts/icomoon.ttf?rsrfqf') format('truetype'),
+    url('/assets/fonts/icomoon.woff?rsrfqf') format('woff'),
+    url('/assets/fonts/icomoon.svg?rsrfqf#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
